--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -1,212 +1,181 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="utf-8">
-<title>Will Dayble</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta name="description" content="">
-<meta name="author" content="">
+	<meta charset="utf-8">
 
-<!-- Le styles -->
+	<!-- general metadata -->
+	<title>Will Dayble</title>
+	<meta name="keywords" content="Squareweave, Digital Technology, Web Development, Social Good, Social Impact, Social Enterprise, Startup, Digital Solutions, Innovation, Digital Partnership, Mobile App Development, OurSay, Fitzroy GSD">
+	<meta name="description" content="Molotovs flung and keynotes spoken">
+	<link rel="shortcut icon" href="http://willdayble.com/design/images/dude.png">
+	<link rel="image_src" href="http://willdayble.com/design/images/dude.png">
+	<link rel="canonical" href="http://willdayble.com"/>
 
-<!--
-<link href="design/bootstrap/css/bootstrap.css" rel="stylesheet">
-<link href='http://fonts.googleapis.com/css?family=Ubuntu:300,400,500' rel='stylesheet' type='text/css'>
-<link href="design/bootstrap/css/bootstrap-responsive.css" rel="stylesheet">
--->
-<link href="design/css/normalize.css" rel="stylesheet">
-<link href="design/vendor/ss-everything/ss-everything.css" rel="stylesheet">
-<link href="design/css/go.css" rel="stylesheet">
+	<!-- Open Graph metadata -->
+	<meta property="og:image" content="http://willdayble.com/design/images/dude.png"/>
+	<meta property="og:url" content="http://willdayble.com"/>
+	<meta property="og:title" content="Will Dayble"/>
+	<meta property="og:description" content="Molotovs flung and keynotes spoken"/>
 
+	<!-- Twitter metadata -->
+	<meta name="twitter:card" content="Molotovs flung and keynotes spoken">
+	<meta name="twitter:site" content="willdayble">
+	<meta name="twitter:title" content="Will Dayble">
+	<meta name="twitter:description" content="Molotovs flung and keynotes spoken">
+	<meta name="twitter:creator" content="Will Dayble">
+	<meta name="twitter:image:src" content="http://willdayble.com/design/images/dude.png">
+	<meta name="twitter:domain" content="http://willdayble.com">
 
-<!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
-<!--[if lt IE 9]>
-  <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-<![endif]-->
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="application-name" content="SquareweaveApp">
+	<meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
+	<meta name="author" content="willdayble.com">
 
-<!-- Le fav and touch icons -->
-<link rel="shortcut icon" href="design/images/favicon.ico">
-<link rel="apple-touch-icon-precomposed" sizes="144x144" href="design/bootstrap/ico/apple-touch-icon-144-precomposed.png">
-<link rel="apple-touch-icon-precomposed" sizes="114x114" href="design/bootstrap/ico/apple-touch-icon-114-precomposed.png">
-<link rel="apple-touch-icon-precomposed" sizes="72x72" href="design/bootstrap/ico/apple-touch-icon-72-precomposed.png">
-<link rel="apple-touch-icon-precomposed" href="design/bootstrap/ico/apple-touch-icon-57-precomposed.png">
+	<link rel="shortcut icon" href="design/images/ico/favicon.ico">
+	<link rel="apple-touch-icon-precomposed" sizes="114x114" href="http://willdayble.com/design/images/dude.png">
+	<link rel="apple-touch-icon-precomposed" sizes="72x72" href="http://willdayble.com/design/images/dude.png">
+	<link rel="apple-touch-icon-precomposed" href="http://willdayble.com/design/images/dude.png">
 
-	<script type="text/javascript">
-
-	  var _gaq = _gaq || [];
-	  _gaq.push(['_setAccount', 'UA-5821577-6']);
-	  _gaq.push(['_trackPageview']);
-
-	  (function() {
-	    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-	    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-	    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-	  })();
-
-	</script>
-
+			
+	<!-- stoled from SQW -->
+	<link rel="stylesheet" type="text/css" href="design/css/go.css" media="all">
+	<link rel="stylesheet" type="text/css" href="design/css/hax.css" media="all">
+			
+	<!--[if IE ]><!-- Design Element 'ie' not found --><![endif]-->
+	<!--[if lt IE 9]><script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script><![endif]-->	
+	<!--[if lt IE 8]><script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/chrome-frame/1/CFInstall.min.js"></script><![endif]-->
+	
+	<script type="text/javascript" src="//use.typekit.net/qiw1pfm.js"></script>
+	<script type="text/javascript">try{Typekit.load();}catch(e){}</script>
+	
 </head>
 
 <body>
 
-<div class="kontakt">
-	<a class="" href="mailto:will@willdayble.com"><i class="ss-mail"></i></a>
-	<a class="" href="http://www.linkedin.com/in/willdayble" target="_blank"><i class="ss-social ss-linkedin"></i></a>
-	<a class="" href="http://twitter.com/willdayble" target="_blank"><i class="ss-social ss-twitter"></i></a>
-	<a class="" href="http://facebook.com/willdayble" target="_blank"><i class="ss-social ss-facebook	"></i></a>
-	<a class="" href="skype:willdayble?call"><i class="ss-social ss-skype"></i></a>
-	<a class="" href="http://pinterest.com/willdayble/" target="_blank"><i class="ss-social ss-pinterest"></i></a>
-</div>
+<!--[if lte IE 8]>
+<p class="outdated-browser">Your browser is <em>insecure!</em> Please upgrade your browser for the complete experience of this site.
+	<a href="http://browsehappy.com/">Upgrade.</a>
+</p>
+<![endif]-->
 
+<header class="js_header"> <!-- data-spy="affix" data-offset-top="2" -->
+	<div class="constrain">
+		<a class="btn btn-default logo" href="/">Will Dayble</a>
 
-
-<div class="bound">
-	
-	
-	<h1>
-		<a>
-			<span class="boundy">
-				<i class="ss-rows"></i>
-				<i class="ss-rows where_we_at"></i>			
-			</span>
-
-			Will Dayble
-		</a>
-		<span class="menu">
-			<a href="#" rel="dude">Dude</a>
-			<a href="#" rel="about">About</a>
-			<a href="#" rel="speaking">Speaking</a>			
-			<a href="#" rel="vidya">Video</a>
-			<a href="#" rel="squareweave">Squareweave</a>
-			<a href="#" rel="clarity">Clarity Engine</a>
-			<a href="#" rel="bankai">Bankai</a>
-			<a href="#" rel="allcaps">ALL CAPS Records</a>
-			<a href="#" rel="contact">Contact</a>
-		</span>
-	</h1>
-	
-	<div class="circle">
-	
-<!-- 		<div class="rotation_default"> -->
-			<div class="arrows">
-				<a class="arrow arrow_prev off" href="#"></a>
-				<a class="arrow arrow_next" href="#"></a>
+		<nav class="pull-right">
+			<a class="btn btn-default btn-menu js_menu_trigger"><span class="text">Menu</span> <i class="ss-gizmo ss-rows"></i><i class="ss-gizmo ss-delete"></i></a>
+			<div class="drop">
+				<a class="btn btn-default btn-home" href="/">Home</a>
+				<a class="btn btn-default btn-icon" href="//twitter.com/willdayble" target="_blank"><i class="ss-social ss-twitter"></i></a>
+				<a class="btn btn-default btn-icon" href="//linkedin.com/in/willdayble" target="_blank"><i class="ss-social ss-linkedin"></i></a>
+				<a class="btn btn-default btn-icon" href="//facebook.com/willdayble" target="_blank"><i class="ss-social ss-facebook s"></i></a>
+				<a class="btn btn-default btn-cta" href="#contact">Contact</a>
 			</div>
-<!-- 		</div> -->
-		
-		<div class="content">
-		
-			<div class="tab active" id="dude">
-				<div class="dude">
-					<img src="design/images/dude.png" alt="dude">
-					<div class="zing">
-						<h3>Dude</h3>
-						<p>Making the world kinder and stranger.<br>Design, hype and direction for edge projects with rad people.</p>
-					</div>
-				</div>
-			</div>
-			
-			
-			<div class="tab" id="about">
-				<div class="about">
-					&ldquo;He speaks like he's leading a charge. He's honest and disarming. He's entirely unhinged and absolutely <em>on</em>.&rdquo;
-					<cite>- <a href="http://danehunnerup.com">danehunnerup.com</a></cite>
-					<!-- <span id="distance">?</span> -->
-				</div>
-			</div>
-			
-			<div class="tab " id="speaking">
-				<div class="dude">
-					<a class="hero" href="http://www.youtube.com/user/squareweave" target="_blank"><img src="design/images/speaking.png" alt="Speaking"></a>
-					<div class="zing">
-						<h3>Speaking</h3>
-						<p>I talk to corporates, charities, and teams about the net, lean projects and getting shit done. Also, <a href="http://www.youtube.com/watch?v=r2CbbBLVaPk" target="_blank">drunks</a>.</p>
-						<p><a class="btn btn-icon bn-large" href="http://squareweave.com.au/will"><i class="ss-navigateright"></i> Info &amp; booking details</a></p>
-					</div>
-				</div>
-			</div><!-- tab -->			
-			
-			<div class="vidya tab" id="vidya">
-				<div class="dude">
-					<a class="hero" href="http://www.youtube.com/watch?v=DSfFgf8geS4" target="_blank"><img src="design/images/danger.png" alt="danger"></a>
-					<div class="zing">
-						<h3>Dangerous Ideas</h3>
-						<p>I did a TEDx talk about crossbows, web apps, The Pirate Bay, punk rock, Aussie politics and buying 10,000 balloons from China.</p>
-						<p><a class="btn btn-icon bn-large" href="http://www.youtube.com/watch?v=DSfFgf8geS4"><i class="ss-social ss-youtube"></i> Watch it</a></p>
-					</div>
-				</div>
-			</div><!-- tab -->	
-
-			<div class="squareweave tab" id="squareweave">
-				<div class="dude">
-					<a class="hero" href="http://squareweave.com.au" target="_blank"><img src="design/images/sqwwall.png" alt="Squareweave"></a>
-					<div class="zing">
-						<h3>Director</h3>
-						<p>I am one of two Directors at <a href="http://squareweave.com.au">Squareweave</a>. I'm responsible for taste, style and design.</p>
-					</div>
-				</div>
-			</div><!-- tab -->	
-
-			<div class="clarity tab" id="clarity">
-				<div class="dude">
-					<a class="hero" href="http://clarityengine.org" target="_blank"><img src="design/images/clarity.png" alt="Clarity Engine"></a>
-					<div class="zing">
-						<h3>Clarity Engine</h3>
-						<p>I founded <a href="http://clarityengine.org">Clarity Engine</a> to make giving to charity smarter, measured and social. We makin charity sexy.</p>
-					</div>
-				</div>
-			</div><!-- tab -->
-
-			<div class="bankai tab" id="bankai">
-				<div class="dude">
-					<a class="hero" href="http://bankai.fm" target="_blank"><img src="design/images/bankai.png" alt="Bankai"></a>
-					<div class="zing">
-						<h3>Bass Music</h3>
-						<p>I've been producing and touring internationally as <a href="http://bankai.fm">Bankai</a> for a few years. Big ugly bass music.</p>
-					</div>
-				</div>
-			</div><!-- tab -->
-
-			<div class="allcaps tab" id="allcaps">
-				<div class="dude">
-					<a class="hero" href="http://allcaps.fm" target="_blank"><img src="design/images/allcaps.png" alt="ALL CAPS"></a>
-					<div class="zing">
-						<h3>ALL CAPS</h3>
-						<p>A small, mobile, fiercely independent digital label. No punches pulled and few fucks given.</p>
-					</div>
-				</div>
-			</div><!-- tab -->
-
-			<div class="contact tab " id="contact">
-				<div class="dude">
-					<a class="hero" href="mailto:will@willdayble.com" target="_blank"><img src="design/images/chat.png" alt="Email me"></a>
-					<div class="zing">
-						<p>
-							<a class="btn btn-icon bn-large" href="mailto:will@willdayble.com"><i class="ss-mail"></i> will@willdayble.com</a>
-							<a class="btn btn-icon bn-large" href="http://www.linkedin.com/in/willdayble" target="_blank"><i class="ss-social ss-linkedin"></i> LinkedIn</a>
-							<a class="btn btn-icon bn-large" href="http://twitter.com/willdayble" target="_blank"><i class="ss-social ss-twitter"></i> @willdayble</a>
-							<a class="btn btn-icon bn-large" href="http://facebook.com/willdayble" target="_blank"><i class="ss-social ss-facebook	"></i> Facebook</a>
-							<a class="btn btn-icon bn-large" href="skype:willdayble?call"><i class="ss-social ss-skype"></i> Skype me</a>
-							<a class="btn btn-icon bn-large" href="http://pinterest.com/willdayble/" target="_blank"><i class="ss-social ss-pinterest"></i> Pintrest</a>
-							
-						</p>
-					</div>
-				</div>
-			</div><!-- tab -->
-			
-		</div>
-	
+		</nav>
 	</div>
 
-</div><!-- bound -->
+</header>
+
+<article class="reverse red landing">
+	<div class="constrain">
+		<h2>
+			Molotovs
+			<a href="http://twitter.com/willdayble" class="author">
+				<img src="design/images/willdayble/will.png" alt="Will">
+				<cite>Will</cite>
+			</a>
+		</h2>
+<!-- 		<h3 class="subhead">Surety in staying unsure</h3> -->
+		<h3>Tech geek turned social entrepreneur.</h3>
+		<p>I get a kick from measuring impact, breaking dumb systems, and supporting the Aussie social startup economy.</p>
+		
+		<p>You can <a href="#contact">contact me</a> for speaking gigs.</p>
+	</div>
+</article>
 
 
-<!-- Le javascript
-================================================== -->
-<!-- Placed at the end of the document so the pages load faster -->
-<script src="design/js/jquery.js" type="text/javascript"></script>
-<script src="design/bootstrap/js/bootstrap.min.js"></script>
-<script src="design/vendor/ss-everything/ss-standard.js"></script>
-<script src="design/js/toys.js"></script>
+<article class="clientfolk">
+	<div class="constrain">
+		<h2>Clients</h2>
+		<div class="row clients">
+			<div class="col-xs-4 col-sm-3 col-md-2 col"><img src="design/images/clients/grey/fya.jpg" alt="image"></div>
+			<div class="col-xs-4 col-sm-3 col-md-2 col"><img src="design/images/clients/grey/melbourne-uni.jpg" alt="image"></div>
+			<div class="col-xs-4 col-sm-3 col-md-2 col"><img src="design/images/clients/grey/vicgov.jpg" alt="image"></div>
+			<div class="col-xs-4 col-sm-3 col-md-2 col"><img src="design/images/clients/grey/cav.jpg" alt="image"></div>
+			<div class="col-xs-4 col-sm-3 col-md-2 col"><img src="design/images/clients/grey/rmit.jpg" alt="image"></div>
+			<div class="col-xs-4 col-sm-3 col-md-2 col"><img src="design/images/clients/grey/cba.jpg" alt="image"></div>
+			<div class="col-xs-4 col-sm-3 col-md-2 col"><img src="design/images/clients/grey/city-of-melbourne.jpg" alt="image"></div>
+			<div class="col-xs-4 col-sm-3 col-md-2 col"><img src="design/images/clients/grey/headspace.jpg" alt="image"></div>
+			<div class="col-xs-4 col-sm-3 col-md-2 col"><img src="design/images/clients/grey/climate-council.jpg" alt="image"></div>
+			<div class="col-xs-4 col-sm-3 col-md-2 col"><img src="design/images/clients/grey/cwl.jpg" alt="image"></div>
+			<div class="col-xs-4 col-sm-3 col-md-2 col"><img src="design/images/clients/grey/dnc.jpg" alt="image"></div>
+			<div class="col-xs-4 col-sm-3 col-md-2 col"><img src="design/images/clients/grey/slv.jpg" alt="image"></div>
+		</div>	
+	</div>
+</article>
+<hr>
+
+<article class="projects">
+	<div class="constrain">
+		<h2>Projects</h2>
+		<div class="row clients">
+			<div class="col-xs-4 col-sm-3 col"><a href="//squareweave.com.au"><img src="design/images/projects/sqw.png" alt="image"></a></div>
+			<div class="col-xs-4 col-sm-3 col"><a href="//cowalition.com"><img src="design/images/projects/cow.png" alt="image"></a></div>
+			<div class="col-xs-4 col-sm-3 col"><a href="//fitzroygsd.com"><img src="design/images/projects/fitzroy.png" alt="image"></a></div>
+			<div class="col-xs-4 col-sm-3 col"><a href="//allcaps.fm"><img src="design/images/projects/allcaps.png" alt="image"></a></div>
+			<div class="col-xs-4 col-sm-3 col"><a href="//gracefitzroy.com"><img src="design/images/projects/grace.png" alt="image"></a></div>
+			<div class="col-xs-4 col-sm-3 col"><a href="//promobay.org"><img src="design/images/projects/tpb.png" alt="image"></a></div>			
+			<div class="col-xs-4 col-sm-3 col"><a href="//shift.vc"><img src="design/images/projects/shift.png" alt="image"></a></div>
+			<div class="col-xs-4 col-sm-3 col"><a href="//bankai.fm"><img src="design/images/projects/bankai.png" alt="image"></a></div>
+		</div>	
+	</div>
+</article>
+
+
+<section class="fill fya fade_60" id="contact">
+<!--
+	<video autoplay loop>
+	  <source src="design/video/fya/hero.webm" type="video/webm">
+	  <source src="design/video/fya/hero.mp4" type="video/mp4">
+	  <source src="design/video/fya/hero.ogg" type="video/ogg">
+	  <img src="design/images/fya/sea-darker.jpg" alt="image">
+	</video>
+-->
+
+	<p>Book me for a keynote</p>
+	<a class="btn" href="mailto:will@willdayble.com"><i class="ss-gizmo ss-navigateright"></i> will@willdayble.com</a>
+</section>
+
+
+<footer>
+	<div class="constrain">
+		<!-- <a class="brand spinme" href="/">Truth</a> -->
+		<p class="contact">
+			<a href="tel:+1300771337"><i class="ss-gizmo ss-mail"></i>will@willdayble.com</a>
+		</p>
+		<p class="social">
+			<a href="//www.facebook.com/willdayble" target="_blank"><i class="ss-social ss-facebook"></i>Facebook</a>
+			<a href="//www.twitter.com/willdayble" target="_blank"><i class="ss-social ss-twitter"></i>Twitter</a>			
+			<a href="//www.linkedin.com/in/willdayble" target="_blank"><i class="ss-social ss-linkedin"></i>LinkedIn</a>
+		</p>
+	</div>
+</footer>
+
+
+<!-- FOOTER -->
+<!-- vendor / library js -->
+<script src="design/js/jquery-1.9.1.min.js" type="text/javascript"></script>
+
+
+<script src="design/js/affix.js" type="text/javascript"></script>
+
+<!-- app javascript -->
+
+
+
+
+<!-- cached scripts enabled -->
+<script src="design/js/sqw.js" type="text/javascript"></script>
+<!-- <script type="text/javascript">$.extend(true, app, {"facebook":{"enabled":false},"responder":"static","user":{"exists":false},"nonce":"q-8ZZwfXs5HdNlY2TZhHd4$wM78FGh34W$NcsahDhy_fDLgkSLu_VjgVbcAs1DhE","url":"\/","typekit":{"enabled":false},"bugherd":{"enabled":false},"ga":{"enabled":true,"id":"UA-5821577-1","domain":null}});</script> -->
 </body>
 </html>
