--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -76,20 +76,20 @@
 
 </header>
 
-<article class="reverse red landing">
+<article class="reverse truth landing">
 	<div class="constrain">
 		<h2>
-			Molotovs
+			For Kindness
 			<a href="http://twitter.com/willdayble" class="author">
 				<img src="design/images/willdayble/will.png" alt="Will">
 				<cite>Will</cite>
 			</a>
 		</h2>
 <!-- 		<h3 class="subhead">Surety in staying unsure</h3> -->
-		<h3>Tech geek turned social entrepreneur.</h3>
-		<p>I get a kick from measuring impact, breaking dumb systems, and supporting the Aussie social startup economy.</p>
+		<h3>I&rsquo;m a tech geek turned social entrepreneur.</h3>
+		<p>I get a kick from measuring impact, breaking dumb systems and supporting the Aussie social startup economy.</p>
 		
-		<p>You can <a href="#contact">contact me</a> for speaking gigs.</p>
+		<p>You can <a href="#contact">get in touch</a> about speaking gigs.</p>
 	</div>
 </article>
 
@@ -111,9 +111,18 @@
 			<div class="col-xs-4 col-sm-3 col-md-2 col"><img src="design/images/clients/grey/dnc.jpg" alt="image"></div>
 			<div class="col-xs-4 col-sm-3 col-md-2 col"><img src="design/images/clients/grey/slv.jpg" alt="image"></div>
 		</div>	
+		<hr>
+		<blockquote>
+			<q>&ldquo;Will Dayble speaks with true depth &amp; difference on the intersection between technology &amp; humanity&rdquo;</q>
+			<cite>
+				<img src="design/images/people/trevor.png" alt="Trevor">
+				- Trevor Hughes, CEO
+				<span class="role">International Association of Privacy Professionals</span>
+			</cite>
+		</blockquote>		
+
 	</div>
 </article>
-<hr>
 
 <article class="projects">
 	<div class="constrain">
@@ -142,8 +151,8 @@
 	</video>
 -->
 
-	<p>Book me for a keynote</p>
-	<a class="btn" href="mailto:will@willdayble.com"><i class="ss-gizmo ss-navigateright"></i> will@willdayble.com</a>
+	<p>Keynotes / grace notes</p>
+	<a class="btn" href="mailto:will@willdayble.com"><i class="ss-gizmo ss-navigateright"></i>book via will@willdayble.com</a>
 </section>
 
 
