--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -90,8 +90,18 @@
 		<p>I get a kick from measuring impact, breaking dumb systems and supporting the Aussie social startup economy.</p>
 		
 		<p>You can <a href="#contact">get in touch</a> about speaking gigs.</p>
+		
+		<div class="tfol">
+			<hr>
+			<p><img src="design/images/projects/tfol.png" alt="tfol"></p>
+			<p>Looking for Future of Leadership talk resources?</p>
+			<p><a href="btn btn-default" href="#" target="_blank">See notes at slideshare.net</a></p>
+		</div>
 	</div>
 </article>
+
+
+
 
 
 <article class="clientfolk">
