--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -95,7 +95,7 @@
 			<hr>
 			<p><img src="design/images/projects/tfol.png" alt="tfol"></p>
 			<p>Looking for Future of Leadership talk resources?</p>
-			<p><a href="btn btn-default" href="#" target="_blank">See notes at slideshare.net</a></p>
+			<p><a href="btn btn-default" href="http://www.slideshare.net/willdayble/disruption-and-the-future-of-leadership" target="_blank">See notes at slideshare.net</a></p>
 		</div>
 	</div>
 </article>
