--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -91,16 +91,25 @@
 		
 		<p>You can <a href="#contact">get in touch</a> about speaking gigs.</p>
 		
+<!--
 		<div class="tfol">
 			<hr>
 			<p><img src="design/images/projects/tfol.png" alt="tfol"></p>
 			<p>Looking for Future of Leadership talk resources?</p>
 			<p><a href="btn btn-default" href="http://www.slideshare.net/willdayble/disruption-and-the-future-of-leadership" target="_blank">See notes at slideshare.net</a></p>
 		</div>
+-->
 	</div>
 </article>
 
 
+<section class="fill disrupt">
+	<a class="btn" href="http://www.slideshare.net/willdayble/disruption-and-the-future-of-leadership" target="_blank">
+		<i class="ss-gizmo ss-navigateright"></i>
+			Disruption and the Future of Leadership
+			<em>Looking for slides &amp; links? Click here!</em>
+		</a>
+</section>
 
 
 
