--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -159,6 +159,16 @@
 	</div>
 </article>
 
+<section class="feat clearfix">
+	<a href="https://www.youtube.com/watch?v=DSfFgf8geS4" target="_blank"><img src="design/images/feat/dangerous.jpg" alt="dangerous"><i class="ss-social ss-youtube"></i></a>
+	<a href="https://www.youtube.com/watch?v=r2CbbBLVaPk" target="_blank"><img src="design/images/feat/drunk.jpg" alt="drunk"><i class="ss-social ss-youtube"></i></a>
+	<a href="https://www.youtube.com/watch?v=zI9esN3BqbI" target="_blank"><img src="design/images/feat/iapp.jpg" alt="iapp"><i class="ss-social ss-youtube"></i></a>
+<!--
+	<a href="#"><img src="design/images/feat/knight.jpg" alt="knight"><i class="ss-gizmo ss-document"></i></a>
+	<a href="#"><img src="design/images/feat/mvp.jpg" alt="mvp"><i class="ss-gizmo ss-document"></i></a>
+	<a href="#"><img src="design/images/feat/mvp.jpg" alt="mvp"><i class="ss-gizmo ss-document"></i></a>
+-->
+</section>
 
 <section class="fill fya fade_60" id="contact">
 <!--
@@ -205,5 +215,17 @@
 <!-- cached scripts enabled -->
 <script src="design/js/sqw.js" type="text/javascript"></script>
 <!-- <script type="text/javascript">$.extend(true, app, {"facebook":{"enabled":false},"responder":"static","user":{"exists":false},"nonce":"q-8ZZwfXs5HdNlY2TZhHd4$wM78FGh34W$NcsahDhy_fDLgkSLu_VjgVbcAs1DhE","url":"\/","typekit":{"enabled":false},"bugherd":{"enabled":false},"ga":{"enabled":true,"id":"UA-5821577-1","domain":null}});</script> -->
+
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-5821577-9', 'auto');
+  ga('send', 'pageview');
+
+</script>
+
 </body>
 </html>
