--- a/htdocs/services.html
+++ b/htdocs/services.html
@@ -77,90 +77,59 @@
 
 </header>
 
-<article class="reverse truth landing">
+<article class="reverse red" id="truth">
 	<div class="constrain">
-		<h2>
-			Will Dayble
-			<a href="http://twitter.com/willdayble" class="author">
-				<img src="design/images/willdayble/will.png" alt="Will">
-			</a>
-		</h2>
-<!-- 		<h3 class="subhead">Surety in staying unsure</h3> -->
-		<h3>I&rsquo;m a tech geek turned social entrepreneur.</h3>
-		<p>I get a kick from impact measurement, breaking dumb systems and supporting the Aussie social startup economy.</p>
-		
-		<p>You can <a href="#contact">get in touch</a> about speaking gigs.</p>
-		
-<!--
-		<div class="tfol">
-			<hr>
-			<p><img src="design/images/projects/tfol.png" alt="tfol"></p>
-			<p>Looking for Future of Leadership talk resources?</p>
-			<p><a href="btn btn-default" href="http://www.slideshare.net/willdayble/disruption-and-the-future-of-leadership" target="_blank">See notes at slideshare.net</a></p>
-		</div>
--->
+		<h2>Services</h2>
+		<h3 class="subhead">The translation between strategic intent and disruptive strategy.</h3>
+		<p>I help companies move from <em>&lsquo;we want some internets&rsquo;</em> to clarity on the mercurial world of digital and disruption.</p>		
+		<p>Mash my experience against the smartest minds in your organisation and good things happen.</p>
+		<p>It&rsquo;s  possible to smart push organisations towards all those lovely words like &lsquo;innovation&rsquo; if you gear up the right behaviours, environments and players.</p>
+		<p>I have designed and facilitated presentations, interventions, programs and workshops along these themes:</p>
+		<dl>
+			<dt>1</dt><dd>Digital strategy</dd>
+			<dt>2</dt><dd>Leadership development</dd>
+			<dt>3</dt><dd>Rapid prototyping</dd>
+			<dt>4</dt><dd>Lean and Agile methodology</dd>
+			<dt>5</dt><dd>Comms and brand strategy</dd>
+			<dt>6</dt><dd>Application development</dd>
+			<dt>7</dt><dd>Digital transformation</dd>
+			<dt>7</dt><dd>User Experience Design</dd>			
+		</dl>
+		<p>Senior executives tackling these challenges have found my expertise in digital and innovation strategy to be invaluable.</p>
+		<hr>
 	</div>
 </article>
 
-
-<section class="fill disrupt">
-	<a class="btn" href="http://www.slideshare.net/willdayble/disruption-and-the-future-of-leadership" target="_blank">
-		<i class="ss-gizmo ss-navigateright"></i>
-			Disruption and the Future of Leadership
-			<em>Looking for slides &amp; links? Click here!</em>
-		</a>
+<section class="feat clearfix" id="video">
+	<a href="https://www.youtube.com/watch?v=DSfFgf8geS4" target="_blank"><img src="design/images/feat/dangerous.jpg" alt="dangerous"><i class="ss-social ss-youtube"></i></a>
+	<a href="https://www.youtube.com/watch?v=r2CbbBLVaPk" target="_blank"><img src="design/images/feat/drunk.jpg" alt="drunk"><i class="ss-social ss-youtube"></i></a>
+	<a href="https://www.youtube.com/watch?v=zI9esN3BqbI" target="_blank"><img src="design/images/feat/iapp.jpg" alt="iapp"><i class="ss-social ss-youtube"></i></a>
+<!--
+	<a href="#"><img src="design/images/feat/knight.jpg" alt="knight"><i class="ss-gizmo ss-document"></i></a>
+	<a href="#"><img src="design/images/feat/mvp.jpg" alt="mvp"><i class="ss-gizmo ss-document"></i></a>
+	<a href="#"><img src="design/images/feat/mvp.jpg" alt="mvp"><i class="ss-gizmo ss-document"></i></a>
+-->
 </section>
 
-
-
-<article class="clientfolk">
+<article>
 	<div class="constrain">
-		<h2>Clients</h2>
-		<div class="row clients">
-			<div class="col-xs-4 col-sm-3 col-md-2 col"><img src="design/images/clients/grey/fya.jpg" alt="image"></div>
-			<div class="col-xs-4 col-sm-3 col-md-2 col"><img src="design/images/clients/grey/melbourne-uni.jpg" alt="image"></div>
-			<div class="col-xs-4 col-sm-3 col-md-2 col"><img src="design/images/clients/grey/vicgov.jpg" alt="image"></div>
-			<div class="col-xs-4 col-sm-3 col-md-2 col"><img src="design/images/clients/grey/cav.jpg" alt="image"></div>
-			<div class="col-xs-4 col-sm-3 col-md-2 col"><img src="design/images/clients/grey/rmit.jpg" alt="image"></div>
-			<div class="col-xs-4 col-sm-3 col-md-2 col"><img src="design/images/clients/grey/cba.jpg" alt="image"></div>
-			<div class="col-xs-4 col-sm-3 col-md-2 col"><img src="design/images/clients/grey/city-of-melbourne.jpg" alt="image"></div>
-			<div class="col-xs-4 col-sm-3 col-md-2 col"><img src="design/images/clients/grey/headspace.jpg" alt="image"></div>
-			<div class="col-xs-4 col-sm-3 col-md-2 col"><img src="design/images/clients/grey/climate-council.jpg" alt="image"></div>
-			<div class="col-xs-4 col-sm-3 col-md-2 col"><img src="design/images/clients/grey/cwl.jpg" alt="image"></div>
-			<div class="col-xs-4 col-sm-3 col-md-2 col"><img src="design/images/clients/grey/dnc.jpg" alt="image"></div>
-			<div class="col-xs-4 col-sm-3 col-md-2 col"><img src="design/images/clients/grey/slv.jpg" alt="image"></div>
-		</div>	
+		<h2>Grace notes</h2>
+		<h3 class="subhead">It often kicks off with a keynote, master class or provocation.</h3>
+		<p>In a world rife with hype, buzz phrases and impostor syndrome, I bring a fresh, untethered approach to fuzzy topics like innovation and digital disruption.</p>
+		<p>If you&rsquo;re organising an event with switched on people who are over impractical mountaintop experiences, I can offer something grounded and pragmatic, based upon the latest in tech, design and the future of work.</p>
+		<p>Whether it&rsquo;s working with you to set the tone, or closing out with a workshoppy keynote including practical tools and perspectives, I&rsquo;m big on events being the first move in progress towards something great.</p>
 		<hr>
-		<blockquote>
-			<q>&ldquo;Will Dayble speaks with true depth &amp; difference on the intersection between technology &amp; humanity&rdquo;</q>
-			<cite>
-				<img src="design/images/people/trevor.png" alt="Trevor">
-				- Trevor Hughes, CEO
-				<span class="role">International Association of Privacy Professionals</span>
-			</cite>
-		</blockquote>		
-
+		<h2>Getting started</h2>
+		<p>The best place to start is to ping me directly via <a href="mailto:will@willdayble.com">will@willdayble.com</a> with the following:</p>
+		<dl>
+			<dt>1</dt><dd>Timing for your event</dd>
+			<dt>2</dt><dd>An understanding of the audience size and type</dd>
+			<dt>3</dt><dd>Behavioural impetus and outcomes. What do we want people <em>doing</em> as a result of this event in the months to come? (This bit is important)</dd>
+		</dl>		
 	</div>
 </article>
 
-<article class="projects">
-	<div class="constrain">
-		<h2>Projects</h2>
-		<div class="row clients">
-			<div class="col-xs-4 col-sm-3 col"><a href="//squareweave.com.au"><img src="design/images/projects/sqw.png" alt="image"></a></div>
-			<div class="col-xs-4 col-sm-3 col"><a href="//cowalition.com"><img src="design/images/projects/cow.png" alt="image"></a></div>
-			<div class="col-xs-4 col-sm-3 col"><a href="//fitzroygsd.com"><img src="design/images/projects/fitzroy.png" alt="image"></a></div>
-			<div class="col-xs-4 col-sm-3 col"><a href="//allcaps.fm"><img src="design/images/projects/allcaps.png" alt="image"></a></div>
-			<div class="col-xs-4 col-sm-3 col"><a href="//gracefitzroy.com"><img src="design/images/projects/grace.png" alt="image"></a></div>
-			<div class="col-xs-4 col-sm-3 col"><a href="//promobay.org"><img src="design/images/projects/tpb.png" alt="image"></a></div>			
-			<div class="col-xs-4 col-sm-3 col"><a href="//shift.vc"><img src="design/images/projects/shift.png" alt="image"></a></div>
-			<div class="col-xs-4 col-sm-3 col"><a href="//bankai.fm"><img src="design/images/projects/bankai.png" alt="image"></a></div>
-		</div>	
-	</div>
-</article>
-
-
-<section class="fill fya fade_60">
+<section class="fill fya fade_60" id="contact">
 <!--
 	<video autoplay loop>
 	  <source src="design/video/fya/hero.webm" type="video/webm">
@@ -170,8 +139,8 @@
 	</video>
 -->
 
-	<p>Keynotes / grace notes</p>
-	<a class="btn" href="services.html"><i class="ss-gizmo ss-navigateright"></i>Services available</a>
+	<p>Booking</p>
+	<a class="btn" href="mailto:will@willdayble.com"><i class="ss-gizmo ss-navigateright"></i>Set up a coffee via will@willdayble.com</a>
 </section>
 
 
