crisis of bullshit faith

--- a/htdocs/index-boring.html
+++ b/htdocs/index-boring.html
@@ -67,7 +67,7 @@
 			<div class="drop">
 				<a class="btn btn-default btn-icon" href="//twitter.com/willdayble" target="_blank"><i class="ss-social ss-twitter"></i></a>
 				<a class="btn btn-default btn-icon" href="//linkedin.com/in/willdayble" target="_blank"><i class="ss-social ss-linkedin"></i></a>
-<!-- 				<a class="btn btn-default btn-icon" href="//facebook.com/willdayble" target="_blank"><i class="ss-social ss-facebook s"></i></a> -->
+				<a class="btn btn-default btn-icon" href="//facebook.com/willdayble" target="_blank"><i class="ss-social ss-facebook s"></i></a>
 				<a class="btn btn-default btn-home" href="/">Home</a>
 				<a class="btn btn-default" href="services.html">Services</a>
 				<a class="btn btn-default btn-cta" href="#contact">Contact</a>
@@ -78,7 +78,6 @@
 </header>
 
 
-<!--
 <article class="reverse truth landing">
 	<div class="constrain">
 		<h2>
@@ -87,19 +86,23 @@
 				<img src="design/images/willdayble/will.png" alt="Will">
 			</a>
 		</h2>
+<!-- 		<h3 class="subhead">Surety in staying unsure</h3> -->
 		<h3>I&rsquo;m a tech geek turned social entrepreneur.</h3>
 		<p>I get a kick from impact measurement, breaking dumb systems and supporting the Aussie social startup economy.</p>
 		
 		<p>You can <a href="#contact">get in touch</a> about speaking gigs.</p>
-	</div>
-</article>
+		
+<!--
+		<div class="tfol">
+			<hr>
+			<p><img src="design/images/projects/tfol.png" alt="tfol"></p>
+			<p>Looking for Future of Leadership talk resources?</p>
+			<p><a href="btn btn-default" href="http://www.slideshare.net/willdayble/disruption-and-the-future-of-leadership" target="_blank">See notes at slideshare.net</a></p>
+		</div>
 -->
-
-<article class="ego reverse red">
-	<div class="constrain">
-		<h1 class="js_rotator">Social enterprise without the bullshit.</h1>
 	</div>
 </article>
+
 
 <section class="fill disrupt">
 	<a class="btn" href="http://www.slideshare.net/willdayble/disruption-and-the-future-of-leadership" target="_blank">
@@ -186,7 +189,7 @@
 <!-- vendor / library js -->
 <script src="design/js/jquery-1.9.1.min.js" type="text/javascript"></script>
 
-<script src="design/js/toys.js" type="text/javascript"></script>
+
 <script src="design/js/affix.js" type="text/javascript"></script>
 
 <!-- app javascript -->
