--- a/htdocs/services.html
+++ b/htdocs/services.html
@@ -67,7 +67,7 @@
 			<div class="drop">
 				<a class="btn btn-default btn-icon" href="//twitter.com/willdayble" target="_blank"><i class="ss-social ss-twitter"></i></a>
 				<a class="btn btn-default btn-icon" href="//linkedin.com/in/willdayble" target="_blank"><i class="ss-social ss-linkedin"></i></a>
-				<a class="btn btn-default btn-icon" href="//facebook.com/willdayble" target="_blank"><i class="ss-social ss-facebook s"></i></a>
+<!-- 				<a class="btn btn-default btn-icon" href="//facebook.com/willdayble" target="_blank"><i class="ss-social ss-facebook s"></i></a> -->
 				<a class="btn btn-default btn-home" href="/">Home</a>
 				<a class="btn btn-default" href="services.html">Services</a>
 				<a class="btn btn-default btn-cta" href="#contact">Contact</a>
