make it more gif plz

--- a/htdocs/fees.html
+++ b/htdocs/fees.html
@@ -77,31 +77,33 @@
 
 </header>
 
-<section class="fill fya fade_60 yeah">
-	<p>Services</p>
-	<a class="btn" href="#fees"><i class="ss-gizmo ss-navigatedown"></i> Keynotes &amp; grace notes</a>
+
+<section class="fill fya fade_60 woah">
+	<p>Fee Guide</p>
+	<a class="btn" href="#fees"><i class="ss-gizmo ss-navigatedown"></i> Show me the money</a>
 </section>
 
-<article class="reverse red" id="truth">
+
+<article class="reverse blue" id="fees">
 	<div class="constrain">
-		<h2>Services</h2>
-		<h3 class="subhead">The translation between strategic intent and disruptive strategy.</h3>
-		<p>I help companies move from <em>&lsquo;we want some internets&rsquo;</em> to clarity on the mercurial world of digital and disruption.</p>		
-		<p>Mash my experience against the smartest minds in your organisation and good things happen.</p>
-		<p>It&rsquo;s  possible to smart push organisations towards all those lovely words like &lsquo;innovation&rsquo; if you gear up the right behaviours, environments and players.</p>
-		<p>I have designed and facilitated presentations, interventions, programs and workshops along these themes:</p>
+		<h2>Fees</h2>
+		<h3 class="subhead">The indicators below are a good guide for budgeting purposes.</h3>
 		<dl>
-			<dt>1</dt><dd>Digital strategy</dd>
-			<dt>2</dt><dd>Leadership development</dd>
-			<dt>3</dt><dd>Rapid prototyping</dd>
-			<dt>4</dt><dd>Lean and Agile methodology</dd>
-			<dt>5</dt><dd>Comms and brand strategy</dd>
-			<dt>6</dt><dd>Application development</dd>
-			<dt>7</dt><dd>Digital transformation</dd>
-			<dt>7</dt><dd>User Experience Design</dd>			
+			<dt>1</dt><dd>Keynote presentation* <span class="costs">$6,500 <small>+ GST</small></span></dd>
+			<dt>2</dt><dd>Half day workshop <span class="costs">$8,000 <small>+ GST</small></span></dd>
+			<dt>3</dt><dd>Full day workshop <span class="costs">$11,000 <small>+ GST</small></span></dd>
+			<dt>4</dt><dd>Themeweaving** <span class="costs">$9,000 <small>+ GST</small></span></dd>
 		</dl>
-		<p>Senior executives tackling these challenges have found my expertise in digital and innovation strategy to be invaluable.</p>
-		<hr>
+		<h3>No-so-fine print</h3>
+		<p>Professional services fees are provided as a guide for budgeting purposes and may vary according to your outcome goals. Amounts quoted do not allow for personal expenses directly related to the activity (such as transportation and accommodation) and should be added where appropriate.</p>
+		<p>Prices quoted in Australian Dollars. Special rates may apply for education and non-profit organisations, and for multiple/bundled bookings.</p>
+		<p>International engagements are usually more involving, and may attract a higher fee.</p>
+		<hr>		
+		<p><em><strong>*</strong> For multi-day bookings, Will is also available to serve as a themeweaver for the event at favourable rates.</em></p>
+		<p><em><strong>**</strong> <em>Themeweaving</em> is like having an MC with a built in Keynote. I&rsquo;ll guide event introductions, speaking, thanks to sponsors, Q+A and then wrap it all up with a keynote touching on key themes of the day.</em></p>
+
+
+
 	</div>
 </article>
 
@@ -109,17 +111,15 @@
 	<a href="https://www.youtube.com/watch?v=yikqgUlWBZ4" target="_blank"><img src="design/images/feat/do.jpg" alt="dangerous"><i class="ss-social ss-youtube"></i></a>
 	<a href="https://www.youtube.com/watch?v=r2CbbBLVaPk" target="_blank"><img src="design/images/feat/drunk.jpg" alt="drunk"><i class="ss-social ss-youtube"></i></a>
 	<a href="https://www.youtube.com/watch?v=zI9esN3BqbI" target="_blank"><img src="design/images/feat/iapp.jpg" alt="iapp"><i class="ss-social ss-youtube"></i></a>
-
+<!--
+	<a href="#"><img src="design/images/feat/knight.jpg" alt="knight"><i class="ss-gizmo ss-document"></i></a>
+	<a href="#"><img src="design/images/feat/mvp.jpg" alt="mvp"><i class="ss-gizmo ss-document"></i></a>
+	<a href="#"><img src="design/images/feat/mvp.jpg" alt="mvp"><i class="ss-gizmo ss-document"></i></a>
+-->
 </section>
 
 <article>
 	<div class="constrain">
-		<h2>Grace notes</h2>
-		<h3 class="subhead">It often kicks off with a keynote, master class or provocation.</h3>
-		<p>In a world rife with hype, buzz phrases and impostor syndrome, I bring a fresh, untethered approach to fuzzy topics like innovation and digital disruption.</p>
-		<p>If you&rsquo;re organising an event with switched on people who are over impractical mountaintop experiences, I can offer something grounded and pragmatic, based upon the latest in tech, design and the future of work.</p>
-		<p>Whether it&rsquo;s working with you to set the tone, or closing out with a workshoppy keynote including practical tools and perspectives, I&rsquo;m big on events being the first move in progress towards something great.</p>
-		<hr>
 		<h2>Get started</h2>
 		<p>Ping me via <a href="mailto:will@willdayble.com">will@willdayble.com</a> with the following:</p>
 		<dl>
