--- a/htdocs/services.html
+++ b/htdocs/services.html
@@ -85,10 +85,9 @@
 <article class="reverse red" id="truth">
 	<div class="constrain">
 		<h2>Services</h2>
-		<h3 class="subhead">The translation between strategic intent and disruptive strategy.</h3>
-		<p>I help companies move from <em>&lsquo;we want some internets&rsquo;</em> to clarity on the mercurial world of digital and disruption.</p>		
-		<p>Mash my experience against the smartest minds in your organisation and good things happen.</p>
-		<p>It&rsquo;s  possible to smart push organisations towards all those lovely words like &lsquo;innovation&rsquo; if you gear up the right behaviours, environments and players.</p>
+		<h3 class="subhead">The translation point between intent and disruptive strategy.</h3>
+		<p>I help companies move from <em>&lsquo;what the hell is disruption?&rsquo;</em> to clarity on the mercurial world of disruption, work culture and new-school digital engagement.</p>
+		<p>Bringing together stakeholders to push organisations towards all those lovely words like &lsquo;innovation&rsquo; is tricky, but with the right nudge, leadership can spur agile, productive change.</p>
 		<p>I have designed and facilitated presentations, interventions, programs and workshops along these themes:</p>
 		<dl>
 			<dt>1</dt><dd>Digital strategy</dd>
@@ -100,7 +99,14 @@
 			<dt>7</dt><dd>Digital transformation</dd>
 			<dt>7</dt><dd>User Experience Design</dd>			
 		</dl>
-		<p>Senior executives tackling these challenges have found my expertise in digital and innovation strategy to be invaluable.</p>
+		<blockquote>
+			<q>&ldquo;Will makes all that tech wisdom accessible and meaningful to savvy leaders. It works.&rdquo;</q>
+			<cite>
+				<img src="design/images/people/jason.png" alt="Jason">
+				- Dr. Jason Fox
+				<a href="http://www.drjasonfox.com/" class="role">Motivation Scientist</a>
+			</cite>
+		</blockquote>			
 		<hr>
 	</div>
 </article>
