--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -97,7 +97,7 @@
 
 <article class="ego reverse red">
 	<div class="constrain">
-		<h1 class="js_rotator">Social enterprise without the bullshit.</h1>
+		<h1 class="js_rotator">Social enterprise that actually works.</h1>
 	</div>
 </article>
 
