--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -113,7 +113,7 @@
 
 <article class="clientfolk">
 	<div class="constrain">
-		<h2>Clients</h2>
+		<h2>Clients include</h2>
 		<div class="row clients">
 			<div class="col-xs-4 col-sm-3 col-md-2 col"><img src="design/images/clients/grey/fya.jpg" alt="image"></div>
 			<div class="col-xs-4 col-sm-3 col-md-2 col"><img src="design/images/clients/grey/melbourne-uni.jpg" alt="image"></div>
