--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -69,7 +69,7 @@
 				<a class="btn btn-default btn-icon" href="//linkedin.com/in/willdayble" target="_blank"><i class="ss-social ss-linkedin"></i></a>
 <!-- 				<a class="btn btn-default btn-icon" href="//facebook.com/willdayble" target="_blank"><i class="ss-social ss-facebook s"></i></a> -->
 				<a class="btn btn-default btn-home" href="/">Home</a>
-				<a class="btn btn-default" href="services.html">Services</a>
+				<a class="btn btn-default" href="services">Services</a>
 				<a class="btn btn-default btn-cta" href="#contact">Contact</a>
 			</div>
 		</nav>
@@ -97,18 +97,18 @@
 
 <article class="ego reverse red">
 	<div class="constrain">
-		<h1 class="js_rotator">Social enterprise that actually works.</h1>
+		<h1 class="js_rotator">Digital disruption in human terms.</h1>
 	</div>
 </article>
 
-<section class="fill disrupt">
-	<a class="btn" href="http://www.slideshare.net/willdayble/disruption-and-the-future-of-leadership" target="_blank">
-		<i class="ss-gizmo ss-navigateright"></i>
-			Disruption and the Future of Leadership
-			<em>Looking for slides &amp; links? Click here!</em>
-		</a>
-</section>
-
+<article class="aboot">
+	<div class="constrain">
+		<h3>Will is a tech geek turned social entrepreneur.</h3>
+		<p>He delivers keynotes and masterclasses on digital disruption, tech strategy and leadership issues with Fortune 500s, the third sector and the social startup community.</p>
+		<p>2015 is all about <a href="//fitzoygsd.com">questioning how we educate</a> people.</p>
+		<p>In his spare time he doesn&rsquo;t have any.</p>
+	</div>
+</article>
 
 
 <article class="clientfolk">
@@ -145,9 +145,9 @@
 	<div class="constrain">
 		<h2>Projects</h2>
 		<div class="row clients">
+			<div class="col-xs-4 col-sm-3 col"><a href="//fitzroygsd.com"><img src="design/images/projects/fitzroy.png" alt="image"></a></div>
 			<div class="col-xs-4 col-sm-3 col"><a href="//squareweave.com.au"><img src="design/images/projects/sqw.png" alt="image"></a></div>
 			<div class="col-xs-4 col-sm-3 col"><a href="//cowalition.com"><img src="design/images/projects/cow.png" alt="image"></a></div>
-			<div class="col-xs-4 col-sm-3 col"><a href="//fitzroygsd.com"><img src="design/images/projects/fitzroy.png" alt="image"></a></div>
 			<div class="col-xs-4 col-sm-3 col"><a href="//allcaps.fm"><img src="design/images/projects/allcaps.png" alt="image"></a></div>
 			<div class="col-xs-4 col-sm-3 col"><a href="//gracefitzroy.com"><img src="design/images/projects/grace.png" alt="image"></a></div>
 			<div class="col-xs-4 col-sm-3 col"><a href="//promobay.org"><img src="design/images/projects/tpb.png" alt="image"></a></div>			
@@ -161,10 +161,22 @@
 <!--
 <section class="fill fya fade_60">
 	<p>Keynotes / grace notes</p>
-	<a class="btn" href="services.html"><i class="ss-gizmo ss-navigateright"></i>Services available</a>
+	<a class="btn" href="services"><i class="ss-gizmo ss-navigateright"></i>Services available</a>
 </section>
 -->
 
+<!--
+
+<section class="fill disrupt">
+	<a class="btn" href="http://www.slideshare.net/willdayble/disruption-and-the-future-of-leadership" target="_blank">
+		<i class="ss-gizmo ss-navigateright"></i>
+			Disruption and the Future of Leadership
+			<em>Looking for slides &amp; links? Click here!</em>
+		</a>
+</section>
+
+
+-->
 
 
 <footer id="contact">
@@ -174,13 +186,12 @@
 			<a href="tel:+1300771337"><i class="ss-gizmo ss-mail"></i>will@willdayble.com</a>
 		</p>
 		<p class="social">
-			<a href="//www.facebook.com/willdayble" target="_blank"><i class="ss-social ss-facebook"></i>Facebook</a>
-			<a href="//www.twitter.com/willdayble" target="_blank"><i class="ss-social ss-twitter"></i>Twitter</a>			
+			<!-- <a href="//www.facebook.com/willdayble" target="_blank"><i class="ss-social ss-facebook"></i>Facebook</a> -->
+			<a href="//www.twitter.com/willdayble" target="_blank"><i class="ss-social ss-twitter"></i>@willdayble</a>			
 			<a href="//www.linkedin.com/in/willdayble" target="_blank"><i class="ss-social ss-linkedin"></i>LinkedIn</a>
 		</p>
 	</div>
 </footer>
-
 
 <!-- FOOTER -->
 <!-- vendor / library js -->
